Внес правки по замечаниям

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
           <li><a href="map.html">Карта штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
+        <a class="main-header-logo">
+          <img src="img/index-logo.svg" height="100" width="100" alt="Логотип города Седона">
+        </a>
       </nav>
-      <a class="main-header-logo">
-        <img src="img/index-logo.svg" height="100" width="100" alt="Логотип">
-      </a>
-    </header>
+   </header>
     <main class="container">
       <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
-        <div class="main-photo">
-          <img src="img/main-photo.svg" height="100" width="100%" alt="Фото на главной">
-        </div>
-        <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+        <section class="hero">
+          <img src="img/main-photo.svg" height="100" width="100%" alt="Главная фотография города Седона">
+        </section>
+        <p class="promo-bold">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества городка</h2>
           <ul class="advantages-list"> <!--  Основной список -->
@@ -76,20 +76,20 @@
             <b>Заинтересовались?</b>
             <p class="hostels-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <!-- Здесь будет форма -->
-            <img src="img/map.jpg" width="100" height="100" alt="Карта Седоны">
+            <div class="map">
+                <img src="img/map.jpg" width="100" height="100" alt="Карта Седоны">
+            </div>
           </section>
     </main>
     <footer class="main-footer">
       <p class="hashtag">#VISITSEDONA</p>
-      <div class="footer-social">
-        <ul class="social-list">
-        <li><a class="social-button" href="#">Твиттер</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Ютуб</a></li>
-        </ul>
-      </div>
-      <p class="htmlacademy-link">
-        <a href="https://htmlacademy.ru/intensive/htmlcss"></a>
+      <ul class="social-list">
+         <li><a class="social-button social-button-twitter" href="#">Твиттер</a></li>
+         <li><a class="social-button social-button-facebook" href="#">Фейсбук</a></li>
+         <li><a class="social-button social-button-youtube" href="#">Ютуб</a></li>
+      </ul>
+      <p class="copyright">
+        <a href="https://htmlacademy.ru/intensive/htmlcss">Ссылка на лендинг интенсива по HTML и CSS</a>
       </p>
     </footer>
   </body>
