Добавил страницу с поиском гостиниц

--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
               </ul>
           </ul>
           </section>
-          <section class="hostels">
-            <h2 class="hostels-title">Поиск гостиницы в Седоне</h2>
+          <section class="hotels">
+            <h2 class="hotels-title">Поиск гостиницы в Седоне</h2>
             <b>Заинтересовались?</b>
-            <p class="hostels-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <p class="hotels-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <!-- Здесь будет форма -->
             <div class="map">
                 <img src="img/map.jpg" width="100" height="100" alt="Карта Седоны">
             </div>
-          </section>
+        </section>
     </main>
     <footer class="main-footer">
       <p class="hashtag">#VISITSEDONA</p>
