Убрал, ошибки которые выдал валидатор.
1. У img атрибут ширины был задан в процентах, сделал в пикселях.
2. Вложенный список не был обернут в тег li
3. Добавил заголовок второго уровня в блок hero

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <main class="container">
       <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
         <section class="hero">
-          <img src="img/main-photo.svg" height="100" width="100%" alt="Главная фотография города Седона">
+            <h2 class="visually-hidden">Главная фотография города Седона</h2>
+          <img src="img/main-photo.svg" height="100" width="100" alt="Главная фотография города Седона">
         </section>
         <p class="promo-bold">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
@@ -33,6 +34,7 @@
               <p>№1</p>
               <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
+            <li class="advantages-item">
                <ul class="advantages-nested">  <!-- Вложенный список -->
                  <li class="advantages-item advantages-item-white"> <!-- Элемент белого списка -->
                   <h3 class="advantages-title">Жилье</h3>
@@ -46,12 +48,14 @@
                   <h3 class="advantages-title">Сувениры</h3>
                   <p>Не только китайского, но и местного производства!</p>
                 </li>
-              </ul>
+            </ul>
+            </li>
               <li class="advantages-item advantages-item-special"> <!-- Элемент с картинкой и синим фоном -->
                 <h3 class="advantages-title">Там есть мост дьявола</h3>
                 <p>№2</p>
                 <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </li>
+              <li class="advantages-item">
               <ul class="advantages-nested"> <!-- Вложенный список -->
                 <li class="advantages-item advantages-item-white"> <!-- Элемент белого списка -->
                   <h3 class="advantages-title">Небольшая площадь</h3>
@@ -69,6 +73,7 @@
                   <p>Бошльшинство едет в Гранд Каньон и толпится там</p>
                 </li>
               </ul>
+              </li>
           </ul>
           </section>
           <section class="hotels">
