Исправил замечания из скрытых комментариев
1. Добавил классы отвечающие за текст и за картинки/иконки в блоке "Преимущества"
2. В блоке поиска гостиницы добавил залоговок и ссылку на форму

--- a/index.html
+++ b/index.html
@@ -29,55 +29,56 @@
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества городка</h2>
           <ul class="advantages-list"> <!--  Основной список -->
-             <li class="advantages-item advantages-item-special"> <!-- Элемент с картинкой и синим фоном -->
+             <li class="advantages-item advantages-item-special advantages-item-picture"> <!-- Элемент с картинкой и синим фоном -->
               <h3 class="advantages-title">Настоящий городок</h3>
-              <p>№1</p>
-              <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+              <p class="advantages-text">№1</p>
+              <p class="advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="advantages-item">
-               <ul class="advantages-nested">  <!-- Вложенный список -->
-                 <li class="advantages-item advantages-item-white"> <!-- Элемент белого списка -->
+               <ul class="advantages-inner-list">  <!-- Вложенный список -->
+                 <li class="advantages-item advantages-item-white advantages-item-icon"> <!-- Элемент белого списка -->
                   <h3 class="advantages-title">Жилье</h3>
-                  <p>Рекомендуем пожить в настоящем мотеле, все как в кино! </p>
+                  <p class="advantages-text">Рекомендуем пожить в настоящем мотеле, все как в кино! </p>
                 </li>
-                <li class="advantages-item advantages-item-white">
+                <li class="advantages-item advantages-item-white advantages-item-icon">
                   <h3 class="advantages-title">Еда</h3>
-                  <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                  <p class="advantages-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </li>
-                <li class="advantages-item advantages-item-white">
+                <li class="advantages-item advantages-item-white advantages-item-icon">
                   <h3 class="advantages-title">Сувениры</h3>
-                  <p>Не только китайского, но и местного производства!</p>
+                  <p class="advantages-text">Не только китайского, но и местного производства!</p>
                 </li>
             </ul>
             </li>
-              <li class="advantages-item advantages-item-special"> <!-- Элемент с картинкой и синим фоном -->
+              <li class="advantages-item advantages-item-special advantages-item-picture "> <!-- Элемент с картинкой и синим фоном -->
                 <h3 class="advantages-title">Там есть мост дьявола</h3>
-                <p>№2</p>
-                <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                <p class="advantages-text">№2</p>
+                <p class="advantages-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </li>
               <li class="advantages-item">
-              <ul class="advantages-nested"> <!-- Вложенный список -->
+              <ul class="advantages-inner-list"> <!-- Вложенный список -->
                 <li class="advantages-item advantages-item-white"> <!-- Элемент белого списка -->
                   <h3 class="advantages-title">Небольшая площадь</h3>
-                  <p>№3</p>
-                  <p>Все достопримечательности находятся очень близко</p>
+                  <p class="advantages-text">№3</p>
+                  <p class="advantages-text">Все достопримечательности находятся очень близко</p>
                 </li>
                 <li class="advantages-item advantages-item-white">
                   <h3 class="advantages-title">Красивая дорога</h3>
-                  <p>№4</p>
-                  <p>Ехать в седону из Лас-Вегаса совсем не скучно!</p>
+                  <p class="advantages-text">№4</p>
+                  <p class="advantages-text">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
                 </li>
                 <li class="advantages-item advantages-item-white">
                   <h3 class="advantages-title">Мало туристов</h3>
-                  <p>№5</p>
-                  <p>Бошльшинство едет в Гранд Каньон и толпится там</p>
+                  <p class="advantages-text">№5</p>
+                  <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
                 </li>
               </ul>
               </li>
           </ul>
           </section>
           <section class="hotels">
-            <h2 class="hotels-title">Поиск гостиницы в Седоне</h2>
+            <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+            <a class="button button-hotels-search" href="#">Поиск гостиницы в Седоне</a>
             <b>Заинтересовались?</b>
             <p class="hotels-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <!-- Здесь будет форма -->
