Внес изменения по замечаниям
1. span поменял на p
2. Логотип в навигации сделал ссылкой на главную
3. блок div с текстом внутри поменял на p
4. названия ссылок на страницу с гостиницами сделал более подробные
5. удалил атрибут href у ссылки на странице на который мы находимся

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2 class="visually-hidden">Главная фотография города Седона</h2>
           <img src="img/main-photo.svg" height="100" width="100" alt="Главная фотография города Седона">
         </section>
-        <p class="promo-bold">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+        <b class="promo-bold">Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
         <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества городка</h2>
