--- a/hotels.html
+++ b/hotels.html
@@ -7,11 +7,14 @@
     <body>
         <header class="main-header">
           <nav class="main-navigation">
+            <a class="main-header-logo" href="index.html">
+              <img src="img/index-logo.svg" height="100" width="100" alt="Логотип города Седона">
+            </a>
             <ul class="site-navigation">
               <li><a href="info.html">Информация</a></li>
               <li><a href="photo-video.html">Фото и видео</a></li>
               <li><a href="map.html">Карта штата</a></li>
-              <li class="site-navigation-current"><a href="hotels.html">Гостиницы</a></li>
+              <li class="site-navigation-current"><a>Гостиницы</a></li>
             </ul>
           </nav>
        </header>
@@ -31,9 +34,9 @@
                    <li class="hotels-item">
                        <img src="img/hotel-1.jpg" alt="Гостиница Amara Resort & Spa">
                        <h3 class="hotel-name">Amara Resort & Spa</h3>
-                       <span class="hotel-type">Гостиница</span>
-                       <span class="hotel-price">от 4000</span>
-                       <a class="button button-info" href="hotel-1.html">Подробнее</a>
+                       <p class="hotel-type">Гостиница</p>
+                       <p class="hotel-price">от 4000</p>
+                       <a class="button button-info" href="hotel-amara-resort-and-spa.html">Подробнее</a>
                        <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
                        <div class="rating rating-stars">
                            <img src="img/rating-four-star.jpg" alt="Рейтинг гостиницы 4 звезды">
@@ -45,30 +48,30 @@
                    <li class="hotels-item">
                        <img src="img/hotel-2.jpg" alt="Мотель Desert Qual Inn">
                        <h3 class="hotel-name">Desert Qual Inn</h3>
-                       <span class="hotel-type">Мотель</span>
-                       <span class="hotel-price">от 3000</span>
-                       <a class="button button-info" href="hotel-2.html">Подробнее</a>
+                       <p class="hotel-type">Мотель</p>
+                       <p class="hotel-price">от 3000</p>
+                       <a class="button button-info" href="hotel-desert-qual-inn.html">Подробнее</a>
                        <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
                        <div class="rating rating-stars">
                            <img src="img/rating-three-star.jpg" alt="Рейтинг гостиницы 3 звезды">
                        </div>
-                       <div class="raing rating-number">
+                       <p class="raing rating-number">
                            Рейтинг: 8.9
-                       </div>
+                       </p>
                    </li>
                    <li class="hotels-item">
                        <img src="img/hotel-3.jpg" alt="Апартаменты Villas At Poco Diablo">
                        <h3 class="hotel-name">Villas At Poco Diablo</h3>
-                       <span class="hotel-type">Апартаменты</span>
-                       <span class="hotel-price">от 2000</span>
-                       <a class="button button-info" href="hotel-3.html">Подробнее</a>
+                       <p class="hotel-type">Апартаменты</p>
+                       <p class="hotel-price">от 2000</p>
+                       <a class="button button-info" href="hotel-villas-at-poco-diablo.html">Подробнее</a>
                        <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
                        <div class="rating rating-stars">
                            <img src="img/rating-two-star.jpg" alt="Рейтинг гостиницы 2 звезды">
                        </div>
-                       <div class="raing rating-number">
+                       <p class="raing rating-number">
                            Рейтинг: 9.2
-                       </div>
+                       </p>
                    </li>
                </ul>
            </section>
