Экспорт всех изображений из проекта. Подключение контентной графики в разметке.

--- a/hotels.html
+++ b/hotels.html
@@ -32,7 +32,7 @@
                </section>
                <ul class="hotels-list">
                    <li class="hotels-item">
-                       <img src="img/hotel-1.jpg" alt="Гостиница Amara Resort & Spa">
+                       <img src="img/hotel-amara-resort-and-spa.jpg" alt="Гостиница Amara Resort & Spa">
                        <h3 class="hotel-name">Amara Resort & Spa</h3>
                        <p class="hotel-type">Гостиница</p>
                        <p class="hotel-price">от 4000</p>
@@ -46,11 +46,11 @@
                        </p>
                    </li>
                    <li class="hotels-item">
-                       <img src="img/hotel-2.jpg" alt="Мотель Desert Qual Inn">
-                       <h3 class="hotel-name">Desert Qual Inn</h3>
+                       <img src="img/hotel-desert-quail-inn.jpg" alt="Мотель Desert Quail Inn">
+                       <h3 class="hotel-name">Desert Quail Inn</h3>
                        <p class="hotel-type">Мотель</p>
                        <p class="hotel-price">от 3000</p>
-                       <a class="button button-info" href="hotel-desert-qual-inn.html">Подробнее</a>
+                       <a class="button button-info" href="hotel-desert-quail-inn.html">Подробнее</a>
                        <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
                        <div class="rating rating-stars">
                            <img src="img/rating-three-star.jpg" alt="Рейтинг гостиницы 3 звезды">
@@ -60,7 +60,7 @@
                        </p>
                    </li>
                    <li class="hotels-item">
-                       <img src="img/hotel-3.jpg" alt="Апартаменты Villas At Poco Diablo">
+                       <img src="img/hotel-villas-at-poco-diablo.jpg" alt="Апартаменты Villas At Poco Diablo">
                        <h3 class="hotel-name">Villas At Poco Diablo</h3>
                        <p class="hotel-type">Апартаменты</p>
                        <p class="hotel-price">от 2000</p>
