--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
         <section class="hero">
             <h2 class="visually-hidden">Главная фотография города Седона</h2>
-          <img src="img/main-photo.svg" height="100" width="100" alt="Главная фотография города Седона">
+          <img src="img/hero-mountains.jpg" height="600" width="1000" alt="Главная фотография города Седона">
         </section>
         <b class="promo-bold">Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
         <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
@@ -83,7 +83,7 @@
             <p class="hotels-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <!-- Здесь будет форма -->
             <div class="map">
-                <img src="img/map.jpg" width="100" height="100" alt="Карта Седоны">
+                <img src="img/map.jpg" width="800" height="400" alt="Карта Седоны">
             </div>
         </section>
     </main>
