Добавил размеры у картинок. Сжал svg

--- a/hotels.html
+++ b/hotels.html
@@ -32,7 +32,7 @@
                </section>
                <ul class="hotels-list">
                    <li class="hotels-item">
-                       <img src="img/hotel-amara-resort-and-spa.jpg" alt="Гостиница Amara Resort & Spa">
+                       <img src="img/hotel-amara-resort-and-spa.jpg" height="90" width="135" alt="Гостиница Amara Resort & Spa">
                        <h3 class="hotel-name">Amara Resort & Spa</h3>
                        <p class="hotel-type">Гостиница</p>
                        <p class="hotel-price">от 4000</p>
@@ -46,7 +46,7 @@
                        </p>
                    </li>
                    <li class="hotels-item">
-                       <img src="img/hotel-desert-quail-inn.jpg" alt="Мотель Desert Quail Inn">
+                       <img src="img/hotel-desert-quail-inn.jpg" height="90" width="135" alt="Мотель Desert Quail Inn">
                        <h3 class="hotel-name">Desert Quail Inn</h3>
                        <p class="hotel-type">Мотель</p>
                        <p class="hotel-price">от 3000</p>
@@ -60,7 +60,7 @@
                        </p>
                    </li>
                    <li class="hotels-item">
-                       <img src="img/hotel-villas-at-poco-diablo.jpg" alt="Апартаменты Villas At Poco Diablo">
+                       <img src="img/hotel-villas-at-poco-diablo.jpg" height="90" width="135" alt="Апартаменты Villas At Poco Diablo">
                        <h3 class="hotel-name">Villas At Poco Diablo</h3>
                        <p class="hotel-type">Апартаменты</p>
                        <p class="hotel-price">от 2000</p>
