--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </li>
             </ul>
             </li>
-              <li class="advantages-item advantages-item-special advantages-item-picture "> <!-- Элемент с картинкой и синим фоном -->
+              <li class="advantages-item advantages-item-special advantages-item-picture"> <!-- Элемент с картинкой и синим фоном -->
                 <h3 class="advantages-title">Там есть мост дьявола</h3>
                 <p class="advantages-text">№2</p>
                 <p class="advantages-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
@@ -81,29 +81,29 @@
             <a class="button button-hotels-search" href="#">Поиск гостиницы в Седоне</a>
             <b>Заинтересовались?</b>
             <p class="hotels-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <section class = "modal modal-hotels-search"
-                <form class = "hotels-search" action = "https://echo.htmlacademy.ru" method="get">
-                    <p class = "hotels-search-item">
+            <section class="modal modal-hotels-search">
+                <form class="hotels-search" action="https://echo.htmlacademy.ru" method="get">
+                    <p class="hotels-search-item">
                         <label for "arrival-date-field">Дата заезда</label>
-                        <input type = "text" class = "date" name = "arrival-date" id = "arrival-date-field" placeholder ="">
+                        <input type="text" class="date" name="arrival-date" id ="arrival-date-field" placeholder=" ">
                     </p>
                     <p class = "hotels-search-item">
                         <label for="departure-date-field">Дата выезда</label>
-                        <input type = "text" class = "form-date-input" name = "departure-date" id = "departure-date-field" placeholder="">
+                        <input type="text" class="form-date-input" name="departure-date" id="departure-date-field" placeholder=" ">
                     </p>
-                     <p class = "hotels-search-item">
+                     <p class="hotels-search-item">
                          <label for "adults-number-field">Взрослые</label>
                          <button class="button hotel-search-button hotel-search-button-plus"></button>
-                         <input type = "text" name = "adults-number" id="adults-number-field">
+                         <input type="text" name="adults-number" id="adults-number-field">
                          <button class="button hotel-search-button hotel-search-button-minus"></button>
                     </p>
-                    <p class = "hotels-search-item">
+                    <p class="hotels-search-item">
                         <label for "children-number-field">Дети</label>
-                        <button class="button hotel-search-button hotel-search-button-plus"></button>
-                        <input type = "text" name = "children-number" id="children-number-field">
-                        <button class="button hotel-search-button hotel-search-button-minus"></button>
+                        <button class="button hotel-search-button hotel-search-button-plus" type="button"></button>
+                        <input type="text" name="children-number" id="children-number-field">
+                        <button class="button hotel-search-button hotel-search-button-minus" type="button"></button>
                    </p>
-                    <button class = "button" type = "submit">Найти</button>
+                    <button class="button" type="submit">Найти</button>
                 </form>
             </section>
             <div class="map">
