--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
             <section class="modal modal-hotels-search">
                 <form class="hotels-search" action="https://echo.htmlacademy.ru" method="get">
                     <p class="hotels-search-item">
-                        <label for "arrival-date-field">Дата заезда</label>
+                        <label for="arrival-date-field">Дата заезда</label>
                         <input type="text" class="date" name="arrival-date" id ="arrival-date-field" placeholder=" ">
                     </p>
-                    <p class = "hotels-search-item">
+                    <p class="hotels-search-item">
                         <label for="departure-date-field">Дата выезда</label>
                         <input type="text" class="form-date-input" name="departure-date" id="departure-date-field" placeholder=" ">
                     </p>
                      <p class="hotels-search-item">
-                         <label for "adults-number-field">Взрослые</label>
+                         <label for="adults-number-field">Взрослые</label>
                          <button class="button hotel-search-button hotel-search-button-plus"></button>
                          <input type="text" name="adults-number" id="adults-number-field">
                          <button class="button hotel-search-button hotel-search-button-minus"></button>
                     </p>
                     <p class="hotels-search-item">
-                        <label for "children-number-field">Дети</label>
+                        <label for="children-number-field">Дети</label>
                         <button class="button hotel-search-button hotel-search-button-plus" type="button"></button>
                         <input type="text" name="children-number" id="children-number-field">
                         <button class="button hotel-search-button hotel-search-button-minus" type="button"></button>
