--- a/hotels.html
+++ b/hotels.html
@@ -22,7 +22,51 @@
            <h1 class="visually-hidden">Гостиницы города Седона</h1>
            <section class="filters">
                <h2 class="visually-hidden">Фильтры</h2>
-               <!-- Здесь будет форма -->
+                <form class="filters-form" method="get" action="https://echo.htmlacademy.ru" oninput="hotel-price-output-min.value=hotel-price.value">
+                    <fieldset>
+                        <legend class="filters-legend">Инфраструктура</legend>
+                        <ul class="filters-list">
+                            <li class="filters-option">
+                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-pool" id="filters-pool-field" checked>
+                                <label for="filters-pool-field">Бассейн</label>
+                            </li>
+                            <li class="filters-option">
+                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-parking" id="filters-parking-field">
+                                <label for="filters-parking-field">Парковка</label>
+                            </li>
+                            <li class="filters-option">
+                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-wi-fi" id="filters-wi-fi-field">
+                                <label for="filters-wi-fi-field">Wi-Fi</label>
+                            </li>
+                        </ul>
+                    </fieldset>
+                    <fieldset>
+                        <legend class="filters-legend">Тип жилья</legend>
+                        <ul class="filters-list">
+                            <li class="filters-option">
+                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-hotel" id="filters-hotel-field" checked>
+                                <label for="filters-hotel-field">Гостиница</label>
+                            </li>
+                            <li class="filters-option">
+                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-motel" id="filters-motel-field" checked>
+                                <label for="filters-motel-field">Мотель</label>
+                            </li>
+                            <li class="filters-option">
+                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-apartments" id="filters-apartments-field" checked>
+                                <label for="filters-apartments-field">Апартаменты</label>
+                            </li>
+                        </ul>
+                    </fieldset>
+                    <fieldset>
+                        <legend class="filters-legend">Стоимость в сутки (Р):</legend>
+                        <div class="output-area">
+                            <output class="hotel-price-output" name="hotel-price-output-min">0</output>
+                            <output class="hotel-price-output" name="hotel-price-output-max">5000</output>
+                        </div>
+                        <input class="filters-range" type="range" min="0" max="5000" step="500" name="hotel-price" id="hotel-price-range">
+                        <button  class="button range-button" type="submit">Показать</button>
+                    </fieldset>
+                </form>
            </section>
            <section class="hotels">
                <h2 class="visually-hidden">Список гостиниц</h2>
