--- a/hotels.html
+++ b/hotels.html
@@ -60,8 +60,8 @@
                     <fieldset>
                         <legend class="filters-legend">Стоимость в сутки (Р):</legend>
                         <div class="output-area">
-                            <output class="hotel-price-output" name="hotel-price-output-min">0</output>
-                            <output class="hotel-price-output" name="hotel-price-output-max">5000</output>
+                            <input type="text" class="hotel-price-output" name="hotel-price-output-min">0</output>
+                            <input type="text" class="hotel-price-output" name="hotel-price-output-max">5000</output>
                         </div>
                         <input class="filters-range" type="range" min="0" max="5000" step="500" name="hotel-price" id="hotel-price-range">
                         <button  class="button range-button" type="submit">Показать</button>
@@ -72,7 +72,14 @@
                <h2 class="visually-hidden">Список гостиниц</h2>
                <section class="sorting">
                    <h3 class="visually-hidden">Сортировка гостиниц</h3>
-                   <!-- Здесь будет форма -->
+                   <div class="number-of-hotels-wrapper">
+                      <label for="number-of-hotels-field">Найдено:</label>
+                      <input type="text" class="number-of-hotels-input" name="number-of-hotels-input" id="number-of-hotels-field">
+                    </div>
+                    <p class="sorting-text">Сортировка:</p>
+                    <button class="button sorting-button sorting-button-price" type="submit">По цене</button>
+                    <button class="button sorting-button sorting-button-type" type="submit">По типу</button>
+                    <button class="button sorting-button sorting-button-rating" type="submit">По рейтингу</button>
                </section>
                <ul class="hotels-list">
                    <li class="hotels-item">
