--- a/hotels.html
+++ b/hotels.html
@@ -3,12 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Гостинницы города Седона</title>
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+        <link href="css/normalize.css" rel="stylesheet">
+        <link  href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <header class="main-header">
           <nav class="main-navigation">
             <a class="main-header-logo" href="index.html">
-              <img src="img/index-logo.svg" height="100" width="100" alt="Логотип города Седона">
+              <img src="img/logo-sedona.svg" height="70" width="140" alt="Логотип города Седона">
             </a>
             <ul class="site-navigation">
               <li><a href="info.html">Информация</a></li>
@@ -60,8 +63,8 @@
                     <fieldset>
                         <legend class="filters-legend">Стоимость в сутки (Р):</legend>
                         <div class="output-area">
-                            <input type="text" class="hotel-price-output" name="hotel-price-output-min">0</output>
-                            <input type="text" class="hotel-price-output" name="hotel-price-output-max">5000</output>
+                            <input type="text" class="hotel-price-output" name="hotel-price-output-min"></output>
+                            <input type="text" class="hotel-price-output" name="hotel-price-output-max"></output>
                         </div>
                         <input class="filters-range" type="range" min="0" max="5000" step="500" name="hotel-price" id="hotel-price-range">
                         <button  class="button range-button" type="submit">Показать</button>
@@ -78,21 +81,30 @@
                     </div>
                     <p class="sorting-text">Сортировка:</p>
                     <ul class="sorting-list">
-                        <li class="sorting-item"><a class="sorting-link">По цене</a></li>
-                        <li class="sorting-item"><a class="sorting-link">По типу</a></li>
-                        <li class="sorting-item"><a class="sorting-link">По рейтингу</a></li>
+                        <li class="sorting-item"><a class="sorting-link" href="#">По цене</a></li>
+                        <li class="sorting-item"><a class="sorting-link" href="#">По типу</a></li>
+                        <li class="sorting-item"><a class="sorting-link" href="#">По рейтингу</a></li>
                     </ul>
+                    <div class="sort-order-wrapper">
+                        <a class="sort-order-link-ascending">По возрастанию</a>
+                        <a class="sort-order-link-descending">По убыванию</a>
+                    </div>
                </section>
                <ul class="hotels-list">
                    <li class="hotels-item">
                        <img src="img/hotel-amara-resort-and-spa.jpg" height="90" width="135" alt="Гостиница Amara Resort & Spa">
-                       <h3 class="hotel-name">Amara Resort & Spa</h3>
+                       <h3 class="hotel-name">
+                           <a class="hotel-link" href="hotel-amara-resort-and-spa.html">Amara Resort & Spa</a>
+                       </h3>
                        <p class="hotel-type">Гостиница</p>
                        <p class="hotel-price">от 4000</p>
                        <a class="button button-info" href="hotel-amara-resort-and-spa.html">Подробнее</a>
                        <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
                        <div class="rating rating-stars">
-                           <img src="img/rating-four-star.jpg" alt="Рейтинг гостиницы 4 звезды">
+                           <img src="img/star.svg" alt="Рейтинг гостиницы 4 звезды">
+                           <img src="img/star.svg" alt="">
+                           <img src="img/star.svg" alt="">
+                           <img src="img/star.svg" alt="">
                        </div>
                        <p class="raing rating-number">
                            Рейтинг: 8.5
@@ -100,13 +112,17 @@
                    </li>
                    <li class="hotels-item">
                        <img src="img/hotel-desert-quail-inn.jpg" height="90" width="135" alt="Мотель Desert Quail Inn">
-                       <h3 class="hotel-name">Desert Quail Inn</h3>
+                       <h3 class="hotel-name">
+                           <a class="hotel-link" href="hotel-desert-quail-inn.html">Desert Quail Inn</a>
+                       </h3>
                        <p class="hotel-type">Мотель</p>
                        <p class="hotel-price">от 3000</p>
                        <a class="button button-info" href="hotel-desert-quail-inn.html">Подробнее</a>
                        <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
                        <div class="rating rating-stars">
-                           <img src="img/rating-three-star.jpg" alt="Рейтинг гостиницы 3 звезды">
+                           <img src="img/star.svg" alt="Рейтинг гостиницы 3 звезды">
+                           <img src="img/star.svg" alt="">
+                           <img src="img/star.svg" alt="">
                        </div>
                        <p class="raing rating-number">
                            Рейтинг: 8.9
@@ -114,13 +130,16 @@
                    </li>
                    <li class="hotels-item">
                        <img src="img/hotel-villas-at-poco-diablo.jpg" height="90" width="135" alt="Апартаменты Villas At Poco Diablo">
-                       <h3 class="hotel-name">Villas At Poco Diablo</h3>
+                       <h3 class="hotel-name">
+                           <a class="hotel-link" href="hotel-villas-at-poco-diablo.html">Villas At Poco Diablo</a>
+                       </h3>
                        <p class="hotel-type">Апартаменты</p>
                        <p class="hotel-price">от 2000</p>
                        <a class="button button-info" href="hotel-villas-at-poco-diablo.html">Подробнее</a>
                        <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
                        <div class="rating rating-stars">
-                           <img src="img/rating-two-star.jpg" alt="Рейтинг гостиницы 2 звезды">
+                           <img src="img/star.svg" alt="Рейтинг гостиницы 2 звезды">
+                           <img src="img/star.svg" alt="">
                        </div>
                        <p class="raing rating-number">
                            Рейтинг: 9.2
