--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link  href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -14,7 +17,7 @@
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
         <a class="main-header-logo">
-          <img src="img/index-logo.svg" height="100" width="100" alt="Логотип города Седона">
+          <img src="img/logo-sedona.svg" height="70" width="140" alt="Логотип города Седона">
         </a>
       </nav>
    </header>
@@ -22,10 +25,12 @@
       <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
         <section class="hero">
             <h2 class="visually-hidden">Главная фотография города Седона</h2>
-          <img src="img/hero-mountains.jpg" height="600" width="1000" alt="Главная фотография города Седона">
+          <img src="img/welcome-text.png" height="400" width="500" alt="Добро пожаловать в Седону">
         </section>
-        <b class="promo-bold">Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
-        <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+        <div class="main-promo-wrapper">
+            <b class="promo-bold">Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</b>
+            <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+        </div>
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества городка</h2>
           <ul class="advantages-list"> <!--  Основной список -->
@@ -38,15 +43,15 @@
                <ul class="advantages-inner-list">  <!-- Вложенный список -->
                  <li class="advantages-item advantages-item-white advantages-item-icon"> <!-- Элемент белого списка -->
                   <h3 class="advantages-title">Жилье</h3>
-                  <p class="advantages-text">Рекомендуем пожить в настоящем мотеле, все как в кино! </p>
+                  <p class="advantages-text-black">Рекомендуем пожить в настоящем мотеле, все как в кино! </p>
                 </li>
                 <li class="advantages-item advantages-item-white advantages-item-icon">
                   <h3 class="advantages-title">Еда</h3>
-                  <p class="advantages-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                  <p class="advantages-text-black">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </li>
                 <li class="advantages-item advantages-item-white advantages-item-icon">
                   <h3 class="advantages-title">Сувениры</h3>
-                  <p class="advantages-text">Не только китайского, но и местного производства!</p>
+                  <p class="advantages-text-black">Не только китайского, но и местного производства!</p>
                 </li>
             </ul>
             </li>
@@ -57,17 +62,17 @@
               </li>
               <li class="advantages-item">
               <ul class="advantages-inner-list"> <!-- Вложенный список -->
-                <li class="advantages-item advantages-item-white"> <!-- Элемент белого списка -->
+                <li class="advantages-item advantages-item-grey"> <!-- Элемент белого списка -->
                   <h3 class="advantages-title">Небольшая площадь</h3>
                   <p class="advantages-text">№3</p>
                   <p class="advantages-text">Все достопримечательности находятся очень близко</p>
                 </li>
-                <li class="advantages-item advantages-item-white">
+                <li class="advantages-item advantages-item-grey">
                   <h3 class="advantages-title">Красивая дорога</h3>
                   <p class="advantages-text">№4</p>
                   <p class="advantages-text">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
                 </li>
-                <li class="advantages-item advantages-item-white">
+                <li class="advantages-item advantages-item-grey">
                   <h3 class="advantages-title">Мало туристов</h3>
                   <p class="advantages-text">№5</p>
                   <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
@@ -93,21 +98,21 @@
                     </p>
                      <p class="hotels-search-item">
                          <label for="adults-number-field">Взрослые</label>
-                         <button class="button hotel-search-button hotel-search-button-plus"></button>
+                         <button class="button hotel-search-button-plus"></button>
                          <input type="text" name="adults-number" id="adults-number-field">
-                         <button class="button hotel-search-button hotel-search-button-minus"></button>
+                         <button class="button hotel-search-button-minus"></button>
                     </p>
                     <p class="hotels-search-item">
                         <label for="children-number-field">Дети</label>
-                        <button class="button hotel-search-button hotel-search-button-plus" type="button"></button>
+                        <button class="button hotel-search-button-plus" type="button"></button>
                         <input type="text" name="children-number" id="children-number-field">
-                        <button class="button hotel-search-button hotel-search-button-minus" type="button"></button>
+                        <button class="button hotel-search-button-minus" type="button"></button>
                    </p>
-                    <button class="button" type="submit">Найти</button>
+                    <button class="button hotel-search-button" type="submit">Найти</button>
                 </form>
             </section>
             <div class="map">
-                <img src="img/map.jpg" width="800" height="400" alt="Карта Седоны">
+                <img src="img/map.jpg" width="1200" height="470" alt="Карта Седоны">
             </div>
         </section>
     </main>
